--- a/style.css
+++ b/style.css
@@ -860,20 +860,86 @@ color: #b59f5b;
         display: none;
     }
 
-    .trend  {
+    .trend {
         display: flex;
         flex-wrap: wrap;
         gap: 4px;
     }
 
+    .trends-title {
+        margin-top: 48px;
+        font-size: 1.1em;
+    }
+
+    .trends-title:after {
+        margin: 9px auto 19px auto;
+    }
+
     .trend-card {
-       /* width: 45%; */
+        /* width: 45%; */
         width: calc((100% / 2) - 5px);
+        margin-bottom: 1%;
+        padding: 20px 20px 13px 20px;
     }
 
     .main-info {
         width: 51.5%;
         margin: 0px 4.5%;
+    }
+
+    .posts {
+        display: block;
+    }
+
+    .posts:after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 3px;
+        background-color: #eeeeee;
+        margin: 14px auto 33px auto;
+    }
+
+    .posts-images {
+        width: 100%;
+    }
+
+    .blog-posts {
+        margin-top: 5%;
+    }
+
+    .post-title {
+        font-size: 1em;
+    }
+
+    .article-text {
+        font-size: 0.9em;
+    }
+
+    .sidebar {
+        margin-left: 0px;
+        width: 36.1%;
+        margin-right: 2%;
+    }
+
+    /**Products=============*/
+    .products {
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-left: 3.1%;
+        margin-right: 3.1%;
+    }
+
+    .product-title {
+        margin-top: 10px;
+    }
+
+    .product-card {
+        width: calc((100% / 2) - 45px);
+    }
+
+    .products-card:nth-child(3) {
+        margin-top: 46px;
     }
 }
 
@@ -884,8 +950,17 @@ color: #b59f5b;
     }
     .trend  {
         display: flex;
-        /*flex-wrap: nowrap; */
+        flex-wrap: nowrap;
              }
+
+    .trends-title {
+        margin-top: 48px;
+        font-size: 1.1em;
+    }
+
+    .trends-title:after {
+        margin: 9px auto 19px auto;
+    }
 
     .trend-card {
         width: calc(100% / 4);
@@ -894,6 +969,10 @@ color: #b59f5b;
     .main-info {
         width: 51.5%;
         margin: 0px 4.5%;
+    }
+    
+    .footer {
+        margin: 5% 5%;
     }
 }
 
