--- a/style.css
+++ b/style.css
@@ -767,7 +767,8 @@ form.search__box {
 
 /*===Products===*/
 .products {
-    max-width: 1170px;
+    width: 100%;
+    /*max-width: 1170px; */
     margin: auto;
     padding-bottom: 30px;
 }
@@ -803,10 +804,8 @@ form.search__box {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    z-index: 3;
     flex-wrap: nowrap;
-    gap: 10px;
-    margin-left: 15px;
+    margin-left: 30px;
     margin-right: 15px;
 }
 
@@ -829,15 +828,14 @@ form.search__box {
     display: flex;
     flex-direction: column;
     position: relative;
-    height: 440px;
+    max-height: 460px;
     width: calc((100% - (65px * 2)) / 3);
-    /*margin: 0 auto; */
-    padding: 1% 1% 1% 1%;
+    margin: 0 auto;
+    /*padding: 1% 1% 1% 1%; */
 }
 
 .product__img {
-    width: 300px;
-    /*height: 204px; */
+    max-width: 300px;
     text-align: center;
     background-repeat: no-repeat;
 }
@@ -853,6 +851,8 @@ form.search__box {
     flex-direction: column;
     flex-grow: 1;
     justify-content: flex-end;
+    margin-left: 15px;
+    margin-right: 70px;
 }
 
 .product__title {
@@ -1145,12 +1145,13 @@ form.search__box {
         margin-top: 20px;
         margin-left: 15px;
         margin-right: 15px;
+        padding-top: 25px;
     }
 
     .main {
         max-width: 53%;
         margin-left: 15px;
-        margin-right: 0px;
+        margin-right: 0;
     }
 
 
@@ -1163,7 +1164,7 @@ form.search__box {
         width: 100%;
         line-height: 1.5;
         margin-top: 10px;
-        margin-left: 0px;
+        margin-left: 0;
     }
 
     /* Style for "10 мест, р" */
@@ -1188,6 +1189,7 @@ form.search__box {
     }
 
     .products {
+        display: flex;
         flex-wrap: wrap;
     }
 
@@ -1208,25 +1210,34 @@ form.search__box {
 
     .products__container-card {
         flex-wrap: wrap;
+        margin-left: 30px;
+        margin-right: 30px;
+
     }
 
     .product__card {
         width: calc((100% - (65px * 2)) / 2);
-        margin: 0 auto;
+        /* margin: 0 auto; */
     }
 
     .product__card:nth-child(1n+3) {
         flex-wrap: wrap;
-        margin-top: 60px;
-        padding-left: 1%;
+        margin: 60px 0;
+        padding-left: 30px;
     }
 
     .product__img {
         max-width: 292px;
         height: 227px;
-        text-align: center;
     }
 
+    .product__info {
+        outline-offset: 16px;
+    }
+
+    .footer {
+        margin-top: -30px;
+    }
 
     .social__info {
         width: 100%;
@@ -1236,6 +1247,10 @@ form.search__box {
         width: 100%;
         margin: auto;
     }
+}
+
+.copyright {
+    padding-top: 45px;
 }
 
 /*===641-1200 Таблет пейзаж Тренд 4 карточки===*/
@@ -1370,8 +1385,21 @@ form.search__box {
         margin-bottom: 1%;
     }
 
+    .main__sidebar {
+        flex-wrap: nowrap;
+        margin-top: 20px;
+        margin-left: 15px;
+        margin-right: 15px;
+        padding-top: 25px;
+    }
+
     .main__post-images {
         width: 100%;
+    }
+
+    .products {
+        display: flex;
+        flex-wrap: wrap;
     }
 
     .product__title {
@@ -1384,6 +1412,8 @@ form.search__box {
 
     .products__container-card {
         flex-wrap: wrap;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
     .product__card {
@@ -1395,11 +1425,18 @@ form.search__box {
     .product__img {
         max-width: 292px;
         height: 227px;
-        text-align: center;
+    }
+
+    .product__info {
+        outline-offset: 16px;
     }
 
     .footer {
         margin: 5% 5%;
+    }
+
+    .copyright {
+        padding-top: 45px;
     }
 }
 
@@ -1526,7 +1563,7 @@ form.search__box {
     .trends {
         display: flex;
         flex-wrap: wrap;
-           }
+    }
 
     .trends__title {
         margin-top: 48px;
@@ -1552,7 +1589,6 @@ form.search__box {
     }
 
     .main__sidebar {
-        margin: auto;
         flex-wrap: wrap;
         margin-top: 120px;
     }
@@ -1577,6 +1613,11 @@ form.search__box {
         line-height: 1.5;
     }
 
+    .products {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     .products__title {
         margin-top: 48px;
         font-size: 1.1em;
@@ -1584,6 +1625,8 @@ form.search__box {
 
     .products__container-card {
         flex-wrap: wrap;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
 
@@ -1591,13 +1634,15 @@ form.search__box {
         flex-wrap: nowrap;
         width: 100%;
         margin-bottom: 80px;
-        margin-left: 20px;
-        margin-right: 20px;
     }
 
     .product__img {
         max-width: 285px;
         height: 285px;
+    }
+
+    .product__info {
+        outline-offset: 16px;
     }
 
     .social__info {
@@ -1751,12 +1796,19 @@ form.search__box {
         width: 100%;
     }
 
+    .products {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     .product__title {
         margin-top: 10px;
     }
 
     .products__container-card {
         flex-wrap: wrap;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
     .product__card {
@@ -1767,6 +1819,10 @@ form.search__box {
     .product__img {
         max-width: 285px;
         height: 285px;
+    }
+
+    .product__info {
+        outline-offset: 16px;
     }
 
     .social__info {
