--- a/style.css
+++ b/style.css
@@ -767,8 +767,8 @@ form.search__box {
 
 /*===Products===*/
 .products {
-    width: 100%;
-    /*max-width: 1170px; */
+   /* width: 100%; */
+    max-width: 1170px; 
     margin: auto;
     padding-bottom: 30px;
 }
