--- a/style.css
+++ b/style.css
@@ -768,7 +768,7 @@ form.search__box {
 /*===Products===*/
 .products {
    /* width: 100%; */
-    max-width: 1170px; 
+    max-width: 1200px;
     margin: auto;
     padding-bottom: 30px;
 }
@@ -805,7 +805,7 @@ form.search__box {
     justify-content: space-between;
     width: 100%;
     flex-wrap: nowrap;
-    margin-left: 30px;
+    /*margin-left: 30px; */
     margin-right: 15px;
 }
 
