--- a/style.css
+++ b/style.css
@@ -336,9 +336,12 @@ a {
 /*===Left-Right===*/
 .main__sidebar {
     display: flex;
-    max-width: 1200px;
-    margin: auto;
-    padding-top: 60px;
+    max-width: 1170px;
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 /*===Left===*/
@@ -766,8 +769,7 @@ form.search__box {
 
 /*===Products===*/
 .products {
-    /* width: 100%; */
-    max-width: 1200px;
+    max-width: 1170px;
     margin: auto;
     padding-bottom: 30px;
 }
@@ -804,9 +806,9 @@ form.search__box {
     justify-content: space-between;
     width: 100%;
     flex-wrap: nowrap;
-    margin-left: 26px;
-    margin-right: 26px;
-    gap: 26px;
+   margin-left: 10px;
+    margin-right: 10px;
+        gap: 26px;
 }
 
 .products__card::before {
@@ -852,7 +854,7 @@ form.search__box {
     flex-grow: 1;
     justify-content: flex-end;
     margin-left: 10px;
-    margin-right: 45px;
+    margin-right: 32px;
 }
 
 .product__title {
@@ -1152,9 +1154,6 @@ form.search__box {
     .main__sidebar {
         flex-wrap: nowrap;
         margin-top: 20px;
-        margin-left: 15px;
-        margin-right: 15px;
-        padding-top: 25px;
     }
 
     .main {
@@ -1162,7 +1161,6 @@ form.search__box {
         margin-left: 15px;
         margin-right: 0;
     }
-
 
     .main__post {
         flex-wrap: wrap;
@@ -1220,6 +1218,8 @@ form.search__box {
     .products__container-card {
         flex-wrap: wrap;
         margin-bottom: 20px;
+        padding-left: 10px;
+        padding-right: 38px;
     }
 
     .product__card {
@@ -1386,9 +1386,10 @@ form.search__box {
     .main__sidebar {
         flex-wrap: nowrap;
         margin-top: 20px;
-        margin-left: 15px;
-        margin-right: 15px;
-        padding-top: 25px;
+    }
+
+    .sidebar {
+        margin-left: 0;
     }
 
     .main__post-images {
@@ -1423,8 +1424,12 @@ form.search__box {
         height: 227px;
     }
 
+    .product__info {
+        margin-right: 82px;
+    }
+
     .footer {
-        margin: 5% 5%;
+        margin-top: 20px;
     }
 }
 
@@ -1578,7 +1583,7 @@ form.search__box {
 
     .main__sidebar {
         flex-wrap: wrap;
-        margin-top: 120px;
+        margin-top: 290px;
     }
 
     .main {
@@ -1630,11 +1635,11 @@ form.search__box {
     }
 
     .product__info {
-        margin-right: 10px;
+        margin-right: 200px;
     }
 
     .footer {
-      margin: 0 auto;
+        margin: 0 auto;
     }
 
     .social__info {
@@ -1782,6 +1787,11 @@ form.search__box {
     .trends__container-card {
         display: flex;
         flex-wrap: wrap;
+    }
+
+    .main__sidebar {
+        flex-wrap: wrap;
+        margin-top: 160px;
     }
 
     .main__post-images {
